<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dianac.coc.InstitucionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/c_historia"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="18dp"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="4dp"
                    card_view:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/story" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/imageView2"
                            android:layout_marginLeft="18dp"
                            android:layout_marginStart="18dp"
                            android:layout_toEndOf="@+id/imageView2"
                            android:layout_toRightOf="@+id/imageView2"
                            android:gravity="left"
                            android:text="@string/historia"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/c_mision_vision"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="18dp"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="4dp"
                    card_view:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/story" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/imageView3"
                            android:layout_marginLeft="18dp"
                            android:layout_marginStart="18dp"
                            android:layout_toEndOf="@+id/imageView3"
                            android:layout_toRightOf="@+id/imageView3"
                            android:gravity="left"
                            android:text="@string/mv"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/c_valores"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="18dp"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="4dp"
                    card_view:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/story" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/imageView4"
                            android:layout_marginLeft="18dp"
                            android:layout_marginStart="18dp"
                            android:layout_toEndOf="@+id/imageView4"
                            android:layout_toRightOf="@+id/imageView4"
                            android:gravity="left"
                            android:text="@string/valores"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/c_comite"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="18dp"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="4dp"
                    card_view:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/story" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/imageView5"
                            android:layout_marginLeft="18dp"
                            android:layout_marginStart="18dp"
                            android:layout_toEndOf="@+id/imageView5"
                            android:layout_toRightOf="@+id/imageView5"
                            android:gravity="left"
                            android:text="@string/comite"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/c_estatutos"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="18dp"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="4dp"
                    card_view:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/story" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/imageView6"
                            android:layout_marginLeft="18dp"
                            android:layout_marginStart="18dp"
                            android:layout_toEndOf="@+id/imageView6"
                            android:layout_toRightOf="@+id/imageView6"
                            android:gravity="left"
                            android:text="@string/estatuto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>
